--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
   </head>
   <body>
     <ul>
-      <li>🎬 <a href="">Series</a></li>
-      <li>📚 <a href="">Books</a></li>
-      <li>🦸🏻‍♂️ <a href="">Marval Movies</a></li>
+      <li>🎬 <a href="./series.html">Series</a></li>
+      <li>📚 <a href="./books.html">Books</a></li>
+      <li>🦸🏻‍♂️ <a href="./marvel.html">Marvel Movies</a></li>
     </ul>
   </body>
 </html>
