--- a/books.html
+++ b/books.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Books read</title>
+    <link rel="stylesheet" href="./main.css" />
     <style>
-      body {
-        font-family: Monaco;
+      html {
+        font-size: 50%;
       }
+
       li {
-        margin: 3px;
         list-style-type: decimal-leading-zero;
-      }
-      a {
-        text-decoration: none;
-      }
-      a:hover {
-        opacity: 0.7;
       }
     </style>
   </head>
   <body>
-    <h3>Books I read since 2012</h3>
+    <h1>Books I read since 2012</h1>
 
     <ol reversed>
       <li>
