--- a/books.html
+++ b/books.html
@@ -7,10 +7,6 @@
     <title>Books read</title>
     <link rel="stylesheet" href="./main.css" />
     <style>
-      html {
-        font-size: 50%;
-      }
-
       li {
         list-style-type: decimal-leading-zero;
       }
@@ -32,20 +28,20 @@
         <a href="https://en.wikipedia.org/wiki/The_Return_of_the_King"
           >The Lord of the Rings - The Return of the King 🗣</a
         >
-        (Jul '22 - Sep '22')
+        (Jul - Sep '22')
       </li>
 
       <li>
         <a href="https://en.wikipedia.org/wiki/The_Two_Towers"
           >The Lord of the Rings - The Two Towers 🗣</a
         >
-        (Feb '22 - Jul '22)
+        (Feb - Jul '22)
       </li>
       <li>
         <a href="https://en.wikipedia.org/wiki/The_Fellowship_of_the_Ring"
           >The Lord of the Rings - The Fellowship of the Ring 🗣</a
         >
-        (Jan '22 - Feb '22)
+        (Jan - Feb '22)
       </li>
       <li>
         <a href="https://www.spreaker.com/show/kuttasammatham-novel_1"
