--- a/series.html
+++ b/series.html
@@ -1,29 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Series Watched</title>
+    <link rel="stylesheet" href="./main.css" />
     <style>
-      body {
-        font-family: Monaco;
-      }
-
       li {
-        margin: 4px;
         list-style-type: decimal-leading-zero;
-      }
-
-      a {
-        text-decoration: none;
-      }
-
-      a:hover {
-        opacity: 0.7;
       }
     </style>
   </head>
   <body>
-    <h3>Series Watched since 2019</h3>
+    <h1>Series Watched since 2019</h1>
 
     <ol reversed>
       <li>
@@ -156,7 +146,7 @@
         <a href="https://www.imdb.com/title/tt1844624/episodes?season=9"
           >American Horror Story (Season 9)</a
         >
-        (March '21)
+        (Mar '21)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt4667888/episodes?season=1"
@@ -192,49 +182,49 @@
         <a href="https://www.imdb.com/title/tt4922804/episodes?season=2"
           >3% (Season 2)</a
         >
-        (August '20)
+        (Aug '20)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt4922804/episodes?season=1"
           >3% (Season 1)</a
         >
-        (August '20)
+        (Aug '20)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt5180504/episodes?season=1"
           >The Witcher (Season 1)</a
         >
-        (August '20)
+        (Aug '20)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt6156584/episodes?season=1"
           >Snowpiercer (Season 1)</a
         >
-        (August '20)
+        (Aug '20)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt5753856/episodes?season=3"
           >Dark (Season 3)</a
         >
-        (July '20)
+        (Jul '20)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt8295472/episodes?season=2"
           >The Order (Season 2)</a
         >
-        (July '20)
+        (Jul '20)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt8295472/episodes?season=1"
           >The Order (Season 1)</a
         >
-        (June '20)
+        (Jun '20)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt10241238/episodes?season=1"
           >Reality Z (Season 1)</a
         >
-        (June '20)
+        (Jun '20)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt6611916/episodes?season=2"
@@ -306,61 +296,61 @@
         <a href="https://www.imdb.com/title/tt8652642/episodes?season=1"
           >Wu Assassins (Season 1)</a
         >
-        (December '19)
+        (Dec '19)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt6856484/episodes?season=1"
           >Ghost Wars (Season 1)</a
         >
-        (November '19)
+        (Nov '19)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt8755226/episodes?season=1"
           >Daybreak (Season 1)</a
         >
-        (November '19)
+        (Nov '19)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt5639976/episodes?season=1"
           >The Mist (Season 1)</a
         >
-        (November '19)
+        (Nov '19)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt8923854/episodes?season=1"
           >Black Summer (Season 1)</a
         >
-        (November '19)
+        (Nov '19)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt1520211/episodes?season=9"
           >The Walking Dead (Season 9)</a
         >
-        (November '19)
+        (Nov '19)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt0417299/episodes?season=3"
           >Avatar: The Last Airbender (Season 3)</a
         >
-        (October '19)
+        (Oct '19)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt0417299/episodes?season=2"
           >Avatar: The Last Airbender (Season 2)</a
         >
-        (October '19)
+        (Oct '19)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt0417299/episodes?season=1"
           >Avatar: The Last Airbender (Season 1)</a
         >
-        (October '19)
+        (Oct '19)
       </li>
       <li>
         <a href="https://www.imdb.com/title/tt0121955/episodes?season=19"
           >South Park (Season 19)</a
         >
-        (October '19)
+        (Oct '19)
       </li>
     </ol>
   </body>
