- added paranormal series - added autobiography gandhi enddate

--- a/books.html
+++ b/books.html
@@ -21,14 +21,14 @@
           href="https://en.wikipedia.org/wiki/The_Story_of_My_Experiments_with_Truth"
           >The Story of My Experiments with Truth 🗣</a
         >
-        (Mar '23 - )
+        (Mar - Apr '23)
       </li>
 
       <li>
         <a href="https://en.wikipedia.org/wiki/The_Return_of_the_King"
           >The Lord of the Rings - The Return of the King 🗣</a
         >
-        (Jul - Sep '22')
+        (Jul - Sep '22)
       </li>
 
       <li>
@@ -137,13 +137,13 @@
         <a href="https://en.wikipedia.org/wiki/Naalukettu_(novel)"
           >Naalukettu 📚</a
         >
-        (August '19)
+        (Aug '19)
       </li>
       <li>
         <a href="https://en.wikipedia.org/wiki/Mayyazhippuzhayude_Theerangalil"
           >Mayyazhippuzhayude Theerangalil 📚</a
         >
-        (July '19)
+        (Jul '19)
       </li>
       <li>
         <a href="https://en.wikipedia.org/wiki/It_(novel)">IT 🗣</a> (May '19)
