--- a/series.html
+++ b/series.html
@@ -17,6 +17,13 @@
 
     <ol reversed>
       <li>
+        <a href="https://www.imdb.com/title/tt12411074/episodes?season=1"
+          >Paranormal (Season 1)</a
+        >
+        (Apr '23)
+      </li>
+
+      <li>
         <a href="https://www.imdb.com/title/tt19788500/episodes?season=1"
           >Red Rose (Season 1)</a
         >
