- added series, books & marval updates

--- a/books.html
+++ b/books.html
@@ -17,6 +17,21 @@
 
     <ol reversed>
       <li>
+        <a href="https://en.wikipedia.org/wiki/Under_the_Dome_(novel)"
+          >Under the Dome 🗣</a
+        >
+        (June '23)
+      </li>
+
+      <li>
+        <a
+          href="https://en.wikipedia.org/wiki/Homo_Deus:_A_Brief_History_of_Tomorrow"
+          >Homo Deus: A Brief History of Tomorrow 🗣</a
+        >
+        (Apr - May '23)
+      </li>
+
+      <li>
         <a
           href="https://en.wikipedia.org/wiki/The_Story_of_My_Experiments_with_Truth"
           >The Story of My Experiments with Truth 🗣</a
