--- a/marvel.html
+++ b/marvel.html
@@ -51,7 +51,7 @@
       <li><span>✔</span> Marvel’s The First Avengers (May 4, 2012)</li>
     </ol>
 
-    <h4>The Infinity Saga: Phase One (2008-2012)</h4>
+    <h4>The Infinity Saga: Phase Two (2008-2012)</h4>
     <ol>
       <li><span>✔</span> Iron Man 3 (May 3, 2013)</li>
       <li><span>✔</span> Thor: The Dark World (November 8, 2013)</li>
@@ -75,18 +75,15 @@
       <li><span>✔</span> Ant-Man and the Wasp (July 6, 2018)</li>
       <li><span>✔</span> Captain Marvel (March 8, 2019)</li>
       <li><span>✔</span> Avengers: Endgame (April 26, 2019)</li>
-      <li>
-        <span class="not-watched">x</span> Spider-Man: Far From Home (July 2,
-        2019)
-      </li>
+      <li><span>✔</span> Spider-Man: Far From Home (July 2, 2019)</li>
     </ol>
 
     <h4>The Multiverse Saga: Phase Four (2021-2022)</h4>
     <ol>
-      <li><span class="not-watched">x</span> Black Widow (July 9, 2021)</li>
+      <li><span>✔</span> Black Widow (July 9, 2021)</li>
       <li>
-        <span class="not-watched">x</span> Shang-Chi and the Legend of the Ten
-        Rings (September 3, 2021)
+        <span>✔</span> Shang-Chi and the Legend of the Ten Rings (September 3,
+        2021)
       </li>
       <li><span class="not-watched">x</span> Eternals (November 5, 2021)</li>
       <li><span>✔</span> Spider-Man: No Way Home (December 17, 2021)</li>
@@ -127,9 +124,7 @@
     <h4>Phase Six (2024-2026)</h4>
     <ol>
       <li><span class="not-watched">x</span> Deadpool 3 (November 8, 2024)</li>
-      <li>
-        <span class="not-watched">x</span> Fantastic Four (February 14, 2025)
-      </li>
+      <li><span class="not-watched">x</span> Fantastic Four (May 2, 2025)</li>
       <li>
         <span class="not-watched">x</span> Avengers: The Kang Dynasty (May 2,
         2025)
