--- a/series.html
+++ b/series.html
@@ -17,6 +17,55 @@
 
     <ol reversed>
       <li>
+        <a href="https://www.imdb.com/title/tt22696582/episodes?season=1"
+          >Delete (Season 1)</a
+        >
+        (Jul '23)
+      </li>
+
+      <li>
+        <a href="https://www.imdb.com/title/tt10919486/episodes?season=2"
+          >Into the Night (Season 2)</a
+        >
+        (Jul '23)
+      </li>
+
+      <li>
+        <a href="https://www.imdb.com/title/tt10919486/episodes?season=1"
+          >Into the Night (Season 1)</a
+        >
+        (Jun '23)
+      </li>
+
+      <li>
+        <a href="https://www.imdb.com/title/tt2085059/episodes?season=6"
+          >Black Mirror (Season 6)</a
+        >
+        (Jun '23)
+      </li>
+
+      <li>
+        <a href="https://www.imdb.com/title/tt17013106/episodes?season=1"
+          >Black Knight (Season 1)</a
+        >
+        (May '23)
+      </li>
+
+      <li>
+        <a href="https://www.imdb.com/title/tt11988676/episodes?season=1"
+          >Hot Skull (Season 1)</a
+        >
+        (May '23)
+      </li>
+
+      <li>
+        <a href="https://www.imdb.com/title/tt8415836/episodes?season=1"
+          >Cabinet of Curiosities (Season 1)</a
+        >
+        (Apr '23)
+      </li>
+
+      <li>
         <a href="https://www.imdb.com/title/tt12411074/episodes?season=1"
           >Paranormal (Season 1)</a
         >
