--- a/marvel.html
+++ b/marvel.html
@@ -85,7 +85,7 @@
         <span>✔</span> Shang-Chi and the Legend of the Ten Rings (September 3,
         2021)
       </li>
-      <li><span class="not-watched">x</span> Eternals (November 5, 2021)</li>
+      <li><span>✔</span> Eternals (November 5, 2021)</li>
       <li><span>✔</span> Spider-Man: No Way Home (December 17, 2021)</li>
       <li>
         <span class="not-watched">x</span> Doctor Strange in the Multiverse of
