--- a/series.html
+++ b/series.html
@@ -17,6 +17,48 @@
 
     <ol reversed>
       <li>
+        <a href="https://www.imdb.com/title/tt1695360/episodes?season=4"
+          >The Legend of Korra (Season 4)</a
+        >
+        (Sep '23)
+      </li>
+
+      <li>
+        <a href="https://www.imdb.com/title/tt1695360/episodes?season=3"
+          >The Legend of Korra (Season 3)</a
+        >
+        (Sep '23)
+      </li>
+
+      <li>
+        <a href="https://www.imdb.com/title/tt9815502/episodes?season=1"
+          >Bloodride (Season 1)</a
+        >
+        (Sep '23)
+      </li>
+
+      <li>
+        <a href="https://www.imdb.com/title/tt1695360/episodes?season=2"
+          >The Legend of Korra (Season 2)</a
+        >
+        (Sep '23)
+      </li>
+
+      <li>
+        <a href="https://www.imdb.com/title/tt1695360/episodes?season=1"
+          >The Legend of Korra (Season 1)</a
+        >
+        (Aug '23)
+      </li>
+
+      <li>
+        <a href="https://www.imdb.com/title/tt5180504/episodes?season=3"
+          >The Witcher (Season 3)</a
+        >
+        (Jul '23)
+      </li>
+
+      <li>
         <a href="https://www.imdb.com/title/tt22696582/episodes?season=1"
           >Delete (Season 1)</a
         >
@@ -150,7 +192,7 @@
       </li>
 
       <li>
-        <a href="https://www.imdb.com/title/tt5180504/episodes?season=1"
+        <a href="https://www.imdb.com/title/tt5180504/episodes?season=2"
           >The Witcher (Season 2)</a
         >
         (Jul '22)
