--- a/series.html
+++ b/series.html
@@ -17,6 +17,13 @@
 
     <ol reversed>
       <li>
+        <a href="https://www.imdb.com/title/tt11398870/episodes?season=1"
+          >Caliphate</a
+        >
+        (Feb '24)
+      </li>
+
+      <li>
         <a href="https://www.imdb.com/title/tt1695360/episodes?season=4"
           >The Legend of Korra (Season 4)</a
         >
