--- a/marvel.html
+++ b/marvel.html
@@ -88,19 +88,16 @@
       <li><span>✔</span> Eternals (November 5, 2021)</li>
       <li><span>✔</span> Spider-Man: No Way Home (December 17, 2021)</li>
       <li>
-        <span class="not-watched">x</span> Doctor Strange in the Multiverse of
-        Madness (May 6, 2021)
+        <span>✔</span> Doctor Strange in the Multiverse of Madness (May 6, 2021)
       </li>
-      <li>
-        <span class="not-watched">x</span> Thor: Love and Thunder (July 8, 2022)
-      </li>
+      <li><span>✔</span> Thor: Love and Thunder (July 8, 2022)</li>
       <li>
         <span class="not-watched">x</span> Black Panther: Wakanda Forever
         (November 11, 2022)
       </li>
     </ol>
 
-    <h4>Phase Five (2023-2024)</h4>
+    <h4>Phase Five (2023-2025)</h4>
     <ol>
       <li>
         <span class="not-watched">x</span> Ant-Man and the Wasp: Quantumania
@@ -111,31 +108,34 @@
         5, 2023)
       </li>
       <li>
-        <span class="not-watched">x</span> The Marvels (November 11, 2023)
+        <span class="not-watched">x</span> The Marvels (November 10, 2023)
       </li>
       <li>
-        <span class="not-watched">x</span> Captain America: New World Order (May
-        3, 2024)
+        <span class="not-watched">x</span> Deadpool & Wolverine (July 26, 2024)
       </li>
-      <li><span class="not-watched">x</span> Thunderbolts (July 26, 2024)</li>
-      <li><span class="not-watched">x</span> Blade (September 6, 2024)</li>
+
+      <li>
+        <span class="not-watched">x</span> Captain America: Brave New World
+        (February 14, 2025)
+      </li>
+      <li><span class="not-watched">x</span> Thunderbolts (May 2, 2025)</li>
     </ol>
 
-    <h4>Phase Six (2024-2026)</h4>
+    <h4>Phase Six (2025 - 2027)</h4>
     <ol>
-      <li><span class="not-watched">x</span> Deadpool 3 (November 8, 2024)</li>
-      <li><span class="not-watched">x</span> Fantastic Four (May 2, 2025)</li>
+      <li><span class="not-watched">x</span> Fantastic Four (July 25, 2025)</li>
+      <li><span class="not-watched">x</span> Blade (November 7, 2025)</li>
       <li>
-        <span class="not-watched">x</span> Avengers: The Kang Dynasty (May 2,
-        2025)
+        <span class="not-watched">x</span> Avengers: The Kang Dynasty (May 1,
+        2026)
       </li>
       <li>
-        <span class="not-watched">x</span> Avengers: Secret Wars (May 1, 2026)
+        <span class="not-watched">x</span> Avengers: Secret Wars (May 7, 2027)
       </li>
     </ol>
 
     <ref
-      >https://editorial.rottentomatoes.com/guide/marvel-movies-in-order/</ref
+      >https://en.wikipedia.org/wiki/List_of_Marvel_Cinematic_Universe_films</ref
     >
   </body>
 </html>
