updated book content

--- a/books.html
+++ b/books.html
@@ -17,6 +17,27 @@
 
     <ol reversed>
       <li>
+        <a href="https://en.wikipedia.org/wiki/A_Brief_History_of_Time"
+          >A Brief History of Time 🗣</a
+        >
+        (Mar '24)
+      </li>
+
+      <li>
+        <a href="https://en.wikipedia.org/wiki/The_Institute_(King_novel)"
+          >The Institute 🗣</a
+        >
+        (Apr '24)
+      </li>
+
+      <li>
+        <a href="https://en.wikipedia.org/wiki/%27Salem%27s_Lot"
+          >Salem's Lot 🗣</a
+        >
+        (Feb '24 - ****)
+      </li>
+
+      <li>
         <a href="https://en.wikipedia.org/wiki/Under_the_Dome_(novel)"
           >Under the Dome 🗣</a
         >
