--- a/books.html
+++ b/books.html
@@ -17,6 +17,13 @@
 
     <ol reversed>
       <li>
+        <a href="https://en.wikipedia.org/wiki/The_Last_Girl_(memoir)"
+          >The Last Girl 🗣</a
+        >
+        (Aug '24)
+      </li>
+
+      <li>
         <a href="https://en.wikipedia.org/wiki/A_Brief_History_of_Time"
           >A Brief History of Time 🗣</a
         >
