--- a/marvel.html
+++ b/marvel.html
@@ -91,22 +91,15 @@
         <span>✔</span> Doctor Strange in the Multiverse of Madness (May 6, 2021)
       </li>
       <li><span>✔</span> Thor: Love and Thunder (July 8, 2022)</li>
-      <li>
-        <span class="not-watched">x</span> Black Panther: Wakanda Forever
-        (November 11, 2022)
-      </li>
+      <li><span>✔</span> Black Panther: Wakanda Forever (November 11, 2022)</li>
     </ol>
 
     <h4>Phase Five (2023-2025)</h4>
     <ol>
       <li>
-        <span class="not-watched">x</span> Ant-Man and the Wasp: Quantumania
-        (February 17, 2023)
+        <span>✔</span> Ant-Man and the Wasp: Quantumania (February 17, 2023)
       </li>
-      <li>
-        <span class="not-watched">x</span> Guardians of the Galaxy Vol. 3 (May
-        5, 2023)
-      </li>
+      <li><span>✔</span> Guardians of the Galaxy Vol. 3 (May 5, 2023)</li>
       <li>
         <span class="not-watched">x</span> The Marvels (November 10, 2023)
       </li>
